force-app/main/default/objects/Microregion__c/Microregion__c.object-meta.xml
<CustomObject>
    <label>Microregion</label>
    <nameField>
        <label>Microregion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microregions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>