force-app/main/default/objects/Microregion__c/fields/Id_largo__c.field-meta.xml
<CustomField>
    <fullName>Id_largo__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id largo</label>
    <type>Text</type>
</CustomField>