force-app/main/default/objects/Microregion__c/fields/Macroregion__c.field-meta.xml
<CustomField>
    <fullName>Macroregion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macroregion</label>
    <referenceTo>Macroregion__c</referenceTo>
    <relationshipLabel>Microregions</relationshipLabel>
    <relationshipName>Microregions</relationshipName>
    <type>Lookup</type>
</CustomField>