force-app/main/default/objects/Microregion__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Microregions</relationshipLabel>
    <relationshipName>Microregions</relationshipName>
    <type>Lookup</type>
</CustomField>